--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,13 @@
 </head>
 <body>
 
+  <div class="container">
+    <section class="search-section">
+      <input type="text" id="paper-search" placeholder="Buscar papers..." aria-label="Buscar papers">
+    </section>
+
   {{ content }}
+  </div>
 
   <script src="{{ '/assets/js/theme.js' | relative_url }}"></script>
 
